--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Game of Craps</title>
-    <link rel="stylesheet" href="trial.css">
+    <link rel="stylesheet" href="design.css">
     
 </head>
 <body>
@@ -50,6 +50,6 @@
         <button id="reset">Play Again</button>
 </div>  
     
-    <script src="trial.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
